# daily-shadcn

./: .env.example  .gitignore  CHANGELOG.md  CODE_AUDIT_REPORT.md  CONTRIBUTING.md  LICENSE  README.md  REFACTORING_REPORT.md  components.json  index.html  latest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vitest.config.ts
.github/workflows/: changelog.yml  ci.yml  release.yml
docs/: roadmap.json
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  platform.rs  settings.rs  window.rs
src-tauri/src/commands/: backup_cmd.rs  clipboard_cmd.rs  diagnostics_cmd.rs  export_cmd.rs  markdown_cmd.rs  mod.rs  notes_cmd.rs  search_cmd.rs  settings_cmd.rs  tags_cmd.rs
src-tauri/src/db/: clipboard.rs  mod.rs  notes.rs  tags.rs
src/__tests__/: appStore.test.ts
src/bridge/: ipc.ts
src/components/clipboard/: ClipboardDetail.tsx  ClipboardEntry.tsx  ClipboardList.tsx  ClipboardSearch.tsx
src/components/diagnostics/: ErrorBoundary.tsx
src/components/layout/: CollapsibleSection.tsx  Shell.tsx  TitleBar.tsx
src/components/notes/: ArchiveToggle.tsx  EditorToolbar.tsx  ExportMenu.tsx  MarkdownPreview.tsx  NoteEditor.tsx  NoteList.tsx  NoteSearch.tsx  TrashBin.tsx
src/components/search/: SearchOverlay.tsx
src/components/settings/: LanguagePicker.tsx  SettingsPage.tsx
src/components/tags/: CategoryFilter.tsx  TagChip.tsx  TagPicker.tsx
src/stores/: appStore.ts  useUIStore.ts
src/styles/: components.css  global.css
src/types/: index.ts
(+10 files in other folders)
