[package]
name = "daily-restructured"
version = "1.5.0"
description = "A lightweight desktop side-panel utility"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
dirs = "5"
pulldown-cmark = "0.13"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
arboard = "3"
sha2 = "0.10"
zip = "2"
sysinfo = "0.33"
